--- a/.github/workflows/dumyCheck.yml
+++ b/.github/workflows/dumyCheck.yml
@@ -1,11 +1,6 @@
 name: Test Pull Request
 
-on:
-  pull_request:
-    branches:
-    - 'main'
-    paths-ignore:
-    - 'README.md'
+on: [push]
 
 jobs:
 
